--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -371,7 +371,7 @@
             <ScatterFile>.\Device53.sct</ScatterFile>
             <IncludeLibs></IncludeLibs>
             <IncludeLibsPath></IncludeLibsPath>
-            <Misc></Misc>
+            <Misc>--diag_suppress=L6776W</Misc>
             <LinkerInputFile></LinkerInputFile>
             <DisabledWarnings></DisabledWarnings>
           </LDads>
