--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5146,16 +5146,6 @@
               <FilePath>..\libs\common\Utils\StringUtils.h</FilePath>
             </File>
             <File>
-              <FileName>Dictionary.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\Utils\Dictionary.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Dictionary.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Utils\Dictionary.h</FilePath>
-            </File>
-            <File>
               <FileName>CommonFunctions.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\libs\common\Utils\CommonFunctions.cpp</FilePath>
@@ -5184,6 +5174,16 @@
               <FileName>Measures.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\libs\common\Utils\Measures.h</FilePath>
+            </File>
+            <File>
+              <FileName>Dictionary.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\Dictionary.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Dictionary.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\Dictionary.h</FilePath>
             </File>
           </Files>
         </Group>
