--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -4505,6 +4505,11 @@
               <FileType>5</FileType>
               <FilePath>..\libs\common\Display\DisplayPrimitives.h</FilePath>
             </File>
+            <File>
+              <FileName>DisplayTypes.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\DisplayTypes.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
