--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -466,6 +466,11 @@
               <FileType>8</FileType>
               <FilePath>..\libs\common\Display\PainterText.cpp</FilePath>
             </File>
+            <File>
+              <FileName>DisplayTypes.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\DisplayTypes.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
