--- a/sources/_VS/Device53/Device53.vcxproj.filters
+++ b/sources/_VS/Device53/Device53.vcxproj.filters
@@ -540,6 +540,9 @@
     <ClCompile Include="..\..\Device53\src\Utils\Dictionary.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\PainterPIC24.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Device53\src\libs\app_ethernet.h">
