--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -1806,6 +1806,16 @@
               <FileType>5</FileType>
               <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
             </File>
+            <File>
+              <FileName>CPU.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\CPU.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>CPU.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\CPU.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
